--- a/distroprefs/02.NOREPORT.yml
+++ b/distroprefs/02.NOREPORT.yml
@@ -40,6 +40,7 @@ match:
     |BARBIE/
     |MSHELOR/
     |SHLOMIF/                                # author opt out 2013-06-24
+    |MLEHMANN/Canary-Stability-              # testless
     )|
 cpanconfig:
   test_report: 0
