--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -17,6 +17,7 @@ match:
     .^   # never matches, only purpose is to let things align nicely
     |.+/Moose-1.99                           # rt.cpan.org 66211
     |.+/Net-CLI-Interact-\d                  # hangs
+    |.+/Perl6/                               # perl5 only
     |.+/Test-Simple-2.00_                    # rt.cpan.org 66317
     |.+/Win32(API)?-                         # I have only linux
     |.+Net-Whois-IANA-\d                     # endless loop in testing
@@ -186,7 +187,6 @@ match:
     |NWCLARK/perl-                           # pumpkin
     |NXADM/App-Unix-RPasswd-\d               # takes too much time, no idea what it does
     |OALDERS/URI-ParseSearchString-More-0.04
-    |PSIXDISTS/Perl6/                        # perl5 only
     |PERIGRIN/Git-Wrapper-\d                 # some huge kill triggered?
     |PERLER/CatalystX-ExtJS-Direct-\d        #
     |PEVANS/IPC-PerlSSH-Async-\d             # asks for a password during testing
