--- a/distroprefs/HAYASHI.Term-ReadLine-Gnu.yml
+++ b/distroprefs/HAYASHI.Term-ReadLine-Gnu.yml
@@ -1,15 +1,12 @@
 ---
 comment: |
 
-  the ANDK-01 patch enables the user to disable the interactive Tk
-  test by setting AUTOMATED_TESTING
+  Around 1.31 I discovered that AUTOMATED_TESTING=1 leads to
 
-  Seems not needed anymore since 1.18
+  cannot open /dev/tty
 
 match:
-  distribution: "^HAYASHI/Term-ReadLine-Gnu-1.1[67]"
-patches:
-  - "ANDK/patches/Term-ReadLine-Gnu-1.16-ANDK-01.patch.gz"
+  distribution: "^HAYASHI/Term-ReadLine-Gnu-"
 test:
   env:
-    AUTOMATED_TESTING: 1
+    AUTOMATED_TESTING: 0
