--- a/distroprefs/02.NOREPORT.yml
+++ b/distroprefs/02.NOREPORT.yml
@@ -14,7 +14,7 @@ comment: |
 
 match:
   perlconfig:
-    version: '^5\.(7|9|11|13|15|17|19|21)\.'
+    version: '^5\.(7|9|1[13579]|2[13])\.'
 cpanconfig:
   test_report: 0
 ---
