--- a/distroprefs/KAORU.Geo-Coder-Many.yml
+++ b/distroprefs/KAORU.Geo-Coder-Many.yml
@@ -1,5 +1,5 @@
 --- 
-comment: Make vs Build
+comment: "Make vs Build https://rt.cpan.org/Ticket/Display.html?id=115430"
 match:
   distribution: "^KAORU/Geo-Coder-Many-0.46-5.tar.gz"
 cpanconfig:
