--- a/distroprefs/ROCKY.Array-Columnize.yml
+++ b/distroprefs/ROCKY.Array-Columnize.yml
@@ -4,6 +4,13 @@ comment: |
   /me is experimenting with prefer_installer RAND at the moment
   
 match:
-  distribution: '^ROCKY/Array-Columnize-1\.04\.'
+  distribution: |
+    ^(?x:
+    .^   # never matches, only purpose is to let things align nicely
+    |ROCKY/Array-Columnize-1\.04\.
+    |ROCKY/B-CodeLines-1\.1\.
+    |ROCKY/Term-ReadLine-Perl5-1\.43\.
+    |ROBN/Class-Constant-0\.06\.
+    )|
 cpanconfig:
   prefer_installer: "MB"
