--- a/distroprefs/ROCKY.Array-Columnize.yml
+++ b/distroprefs/ROCKY.Array-Columnize.yml
@@ -2,14 +2,16 @@
 comment: |
 
   /me is experimenting with prefer_installer RAND at the moment
-  
+
+  Rocky believes this is a bug in my smoker setup: https://github.com/andk/cpanpm/pull/100
+
+  Class-Constant is reported as 115995
+
 match:
   distribution: |
     ^(?x:
     .^   # never matches, only purpose is to let things align nicely
-    |ROCKY/Array-Columnize-1\.04\.
-    |ROCKY/B-CodeLines-1\.1\.
-    |ROCKY/Term-ReadLine-Perl5-1\.43\.
+    |ROCKY/
     |ROBN/Class-Constant-0\.06\.
     )|
 cpanconfig:
