--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -59,7 +59,7 @@ match:
     |BKCHAPIN/DBIx-Perform-\d                # curses login (?)
     |BLX/XSDSQL_                             # hangs with high memory usage
     |BOBTFISH/Catalyst-Authentication-Store-LDAP-\d # hangs
-    |BOOK/Net-Proxy-0.12                     # hangs quite often, not always
+    |BOOK/Net-Proxy-0.13                     # hangs always
     |BOWMANBS/Audio-Ecasound-\d              # hangs very early: RT 32101
     |BSCHMAL/parrot-0.6.0.tar.gz             # hangs during configure with 5.10
     |BSUGARS/IPC-Shareable-0.60.tar.gz       # hangs
