--- a/distroprefs/SAMV.Set-Object.yml
+++ b/distroprefs/SAMV.Set-Object.yml
@@ -2,8 +2,9 @@
 comment: |
 
   https://rt.cpan.org/Ticket/Display.html?id=50492
+  https://rt.cpan.org/Ticket/Display.html?id=121575
 
 match:
-  distribution: '^SAMV/Set-Object-1\.28\.tar\.gz'
+  distribution: '^SAMV/(Set-Object-1\.28|Scriptalicious-1\.17)\.tar\.gz'
 cpanconfig:
   check_sigs: 0
