disable Acme-CPANAuthors-You-re_using in distroprefs due disk churn

--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -291,6 +291,7 @@ match:
     |VINSWORLD/Net-Syslogd-0.0\d.            # asks question from 04 to 06
     |VINSWORLD/Cisco-Management-0.05         # asks question
     |VPARSEVAL/Mail-MboxParser-0.55.tar.gz   # hangs during some test
+    |VPIT/Acme-CPANAuthors-You-re_using-
     |WONKO/CGI-Application-Dispatch          # endless loop
     |WSMITH/RPC-Oracle-\d                    # asks username for Oracle
     |WSMITH/Email-Folder-Exchange-\d         # asks questions
