--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -28,6 +28,7 @@ match:
     |.*/Alt-Module-Runtime-ButEUMM-0.001     # not conforming installation policy as of Alt-0.19
     |.*/Alt-common-sense-TOBYINK-0.001       # not conforming installation policy as of Alt-0.19
     |.*/ExtUtils-ModuleMaker-                # https://rt.cpan.org/Public/Bug/Display.html?id=111637
+    |.*/Alien-Google-GRPC-                   # a bit too big
     |.*/Net-Fluidinfo-0.45                   # fails since 2012 https://rt.cpan.org/Ticket/Display.html?id=76547
     |.*/Term-EditLine-0.07                   # seems to change terminal settings
     |.*/mod_perl-2.0.\d.tar.gz                 # endless loop seen with 5,6,7,9
