--- a/distroprefs/CRISB.WWW-Curl.yml
+++ b/distroprefs/CRISB.WWW-Curl.yml
@@ -1,16 +1,6 @@
 ---
-comment: |
-
-  Writing "3" because the author promised in
-  http://rt.cpan.org/Ticket/Display.html?id=33579 that the "4" will do
-  it right.
-
-  The bug here is that he tries interactivity during testing and
-  Test::Harness eats everything. So only confirmation is possible by
-  setting PERL_MM_USE_DEFAULT.
-
 match:
-  distribution: "CRISB/WWW-Curl-3"
-test:
-  env:
-    PERL_MM_USE_DEFAULT: 1
+  distribution: "WWW-Curl-4"
+pl:
+  args:
+    - /usr/include/x86_64-linux-gnu
