disable hanging Speech-Recognizer-ViaVoice in distroprefs

--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -247,6 +247,7 @@ match:
     |RHANDOM/Template-Alloy-XS-\d            # very hungry for memory, made amd64 unuseable
     |RHOOPER/HTTP-Lite-\d                    # asks for a URL
     |RICKM/DateTime-LazyInit-1.0200.tgz
+    |RKILGORE/Speech-Recognizer-ViaVoice-0.02.tar.gz
     |RKITOVER/Catalyst-Controller-WrapCGI-0.0030.tar.gz # hangs
     |ROLAND/Schedule-Cron-\d                 # hangs after load_crontab.t
     |ROLAND/jmx4perl-\d                      # asks questions
