--- a/distroprefs/ETHER.Try-Tiny.yml
+++ b/distroprefs/ETHER.Try-Tiny.yml
@@ -4,6 +4,6 @@ comment: |
   https://rt.cpan.org/Ticket/Display.html?id=123908
 
 match:
-  distribution: 'ETHER/Try-Tiny-0\.28\.tar\.gz'
+  distribution: 'ETHER/Try-Tiny-0\.(28|29)\.tar\.gz'
 pl:
   commandline: "$PERL -i~ -ple 'use 5.010;BEGIN{$whenok=eval q{given(q{x}){when(qr/./){1}}}}s/when/whereso/g unless $whenok' t/given_when.t t/when.t; $PERL Makefile.PL"
