--- a/distroprefs/Type-Tiny.yml
+++ b/distroprefs/Type-Tiny.yml
@@ -1,7 +1,8 @@
 ---
 match:
-  distribution: '/Type-Tiny-1\.000005\.'
+  distribution: '/Type-Tiny-1\.002001\.'
   perlconfig:
-    version: '^5\.25\.\d+$'
+    version: '5\.27\.(6|7|8)$'
 patches:
-  - SREZIC/patches/Type-Tiny-1.000005-RT114386-ETHER.patch
+  - SREZIC/patches/Type-Tiny-1.002001-RT123408-SPROUT.patch
+# https://rt.cpan.org/Ticket/Display.html?id=123408
