--- a/distroprefs/02.NOREPORT.yml
+++ b/distroprefs/02.NOREPORT.yml
@@ -2,7 +2,7 @@
 comment: |
 
   In general nobody wants to see reports about old developer releases
-  of perl anymore. The disadvantage of this ditroprefs file is that it
+  of perl anymore. The disadvantage of this distroprefs file is that it
   prevents all the others from matching since only the first match
   wins.
 
@@ -14,7 +14,7 @@ comment: |
 
 match:
   perlconfig:
-    version: '^5\.(7|9|1[13579]|2[13])\.'
+    version: '^5\.(7|9|1[13579]|2[1357])\.'
 cpanconfig:
   test_report: 0
 ---
