--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: perl
 perl:
    - '5.26'
+addons:
+  apt:
+    packages:
+      - expect
+install: cpanm -n YAML
 script: 
   - perl Makefile.PL
   - make touchtestdistros 
