--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -19,7 +19,10 @@ match:
     |.+/Net-CLI-Interact-\d                  # hangs
     |.+/Perl6/                               # perl5 only
     |.+/Test-Simple-2.00_                    # rt.cpan.org 66317
-    |.+/Win32(API)?-                         # I have only linux
+    |.+/Win32(API)?-[A-RT-Za-z]              # Win32-ShellQuote
+    |.+/Win32(API)?-S[A-Za-gi-z]             # Win32-ShellQuote
+    |.+/Win32(API)?-Sh[A-Za-df-z]            # Win32-ShellQuote
+    |.+/Win32(API)?-She[A-Za-km-z]           # Win32-ShellQuote
     |.+Net-Whois-IANA-\d                     # endless loop in testing
     |.+Business-PayPal-API-\d                # author writes to me he considers the test does not lend itself to automated testing
     |.*Mojolicious-Plugin-HamlRenderer       # last release 20120604, rather take MojoX-Renderer-Haml which came 2012-08-14 (the two bite each other)
