--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 before_install:
-   - sudo apt-get install -y perl-doc
+   - sudo apt-get install -y perl-doc liblog-log4perl-perl
 language: perl
 perl:
    - '5.26'
