--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -150,6 +150,7 @@ match:
     |JANL/Net-Server-0.99.6.1                # hangs
     |JANPAZ/Font-TFM-\d                      # asks for path to tfm files
     |JASONK/Data-Faker-0.07                  # t/Data-Faker-DateTime.t runs forever
+    |JCLINE/Robotics-023/Robotics-0\.23      # seems abandoned
     |JDDPAUSE/MarpaX-ESLIF-1.0
     |JDPORTER/Crypt-RandPasswd-0.02          # hangs *sometimes*
     |JESSE/HTTP-Server-Simple-Recorder-0.03  # hangs *sometimes*, even on perls that have previously succeeded
