--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -122,6 +122,7 @@ match:
     |GKNAUSS/WebService-Upcoming             # for members only
     |GONERI/Ocsinventory-Agent-0.0.8.tar.gz  # hangs
     |GONERI/Ocsinventory-Agent-\d            # hanger
+    |GRICHTER/Apache-SessionX-2.01.tar.gz    # user input required
     |GRICHTER/DBIx-Recordset-\d              # hangs
     |GRICHTER/Embperl-2.5.0.tar.gz           # loops on apache src
     |GRICHTER/HTML-Embperl-1.3.6.tar.gz      # loops on apache src
